changed in html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <h1>Hello World</h1>
 
 <div>
@@ -12,3 +14,4 @@
 <div>
     <p>we did it for tracking git pull</p>
 </div>
+</html>
